{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 114,
  "lineage": "59386b2d-ef95-6ed9-a0b6-3fce456d86e4",
  "resources": [
    {
      "module": "module.nautible_aws_app.module.order",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "order_elasticache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:324837360224:security-group/sg-0d3f6cfd3e845951d",
            "description": "security group for statestore",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3f6cfd3e845951d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07469101841467b3d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "nautible-app-dev-order-statestore-sg",
            "name_prefix": "",
            "owner_id": "324837360224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049f0f44c02dc9ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.nautible_aws_platform"
          ]
        }
      ]
    },
    {
      "module": "module.nautible_aws_app.module.product",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "product_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:324837360224:security-group/sg-0a13b0384f310bf44",
            "description": "security group on product db",
            "egress": [],
            "id": "sg-0a13b0384f310bf44",
            "ingress": [],
            "name": "nautible-app-dev-product-db-sg",
            "name_prefix": "",
            "owner_id": "324837360224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-049f0f44c02dc9ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.nautible_aws_platform"
          ]
        }
      ]
    },
    {
      "module": "module.nautible_aws_app.module.product",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "product_db_inbound_jdbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-07469101841467b3d",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3944317679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a13b0384f310bf44",
            "security_group_rule_id": "sgr-0d3d78da2385d9127",
            "self": false,
            "source_security_group_id": "sg-07469101841467b3d",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.nautible_aws_platform",
            "module.nautible_aws_app.module.product.aws_security_group.product_db_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nautible_aws_app.module.product",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "product_db_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3186646629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a13b0384f310bf44",
            "security_group_rule_id": "sgr-08c49360ee951bd03",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.nautible_aws_platform",
            "module.nautible_aws_app.module.product.aws_security_group.product_db_sg"
          ]
        }
      ]
    }
  ]
}